@@ -30,7 +30,6 @@ import patch
 import interfaces
 from getpaid.core.options import PersistentOptions
 
-
 AuthorizeNetOptions = PersistentOptions.wire(
                            "AuthorizeNetOptions",
                            "getpaid.authorizedotnet",
